cambios posteriores a la reunion del 30 de Octubre

--- a/src/app/m-trabajo-bitacora/componentes/editar-verificacion-produccion/editar-verificacion-produccion.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/editar-verificacion-produccion/editar-verificacion-produccion.component.html
@@ -260,7 +260,7 @@
         </div>
         <div class="col-md">
           
-            <p class="label">{{verificacionProduccion.porcentajeControl}}%</p>
+            <p class="label">{{verificacionProduccion.PorcentajeMostrar}}%</p>
         </div>
       </div>
     </div>
@@ -271,7 +271,7 @@
           <label for="verificacionProduccion"><b>Porcentaje de Incremento / Disminución :</b></label>
         </div>
         <div class="col-md">
-            <p class="label">{{verificacionProduccion.PorcentajeMostrar}}%</p>
+            <p class="label">{{verificacionProduccion.porcentajeControlEstatico}}%</p>
         </div>
       </div>
     </div>
@@ -298,7 +298,7 @@
               <label for="verificacionProduccion"><b>Valoración:*</b></label>
             </div>
             <div class="col-md">
-                <p class="label">{{verificacionProduccion.descripcionValoracion}}</p>
+                <p class="label">{{verificacionProduccion.valoracion | ValoracionProduccion}}</p>
             </div>
           </div>
         </div>
@@ -330,7 +330,7 @@
     
 
 
-  </div>
+  
 
 
 
