--- a/src/app/m-trabajo-bitacora/componentes/editar-verificacion-fechas/editar-verificacion-fechas.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/editar-verificacion-fechas/editar-verificacion-fechas.component.html
@@ -1,6 +1,5 @@
 <div class="row">
     <div class="col-md-12">
-  
     </div>
   </div>
   
@@ -136,7 +135,7 @@
     
     <div class="row">
         <div class="col-md-6">
-          <div class="row" *ngIf="verificarFechas.valoracion == 0">
+          <div class="row" *ngIf="verificarFechas.valoracion != 0">
             <div class="col-md-4">
                 <br>
               <label for="verificarFechas"><b>Justificado:*</b></label>
@@ -155,7 +154,7 @@
                 <label for="verificarFechas"><b>Valoración:*</b></label>
               </div>
               <div class="col-md">
-                  <p class="mtop">{{verificarFechas.visualizar_valoraciom}}</p>
+                  <p class="mtop">{{verificarFechas.valoracion | valoracionBitacora }}</p>
               </div>
             </div>
           </div>
@@ -165,7 +164,7 @@
   
       
     <div class="row">
-      <div class="col-md-12" *ngIf="verificarFechas.valoracion ==0  && verificarFechas.justificado == 1" >
+      <div class="col-md-12" *ngIf="verificarFechas.valoracion !=0  && verificarFechas.justificado == 1" >
           <div class="row">
         <div class="col-md">
           <label for="verificacionFechas"><b>Observacion:*</b></label>
