--- a/src/app/m-trabajo-bitacora/componentes/editar-verificacion-inyector/editar-verificacion-inyector.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/editar-verificacion-inyector/editar-verificacion-inyector.component.html
@@ -1,5 +1,4 @@
-
-<h1>Verificación de Pozo Productor</h1>
+<h1>Editar Verificación de Pozo Inyector</h1>
 
 <p-fieldset legend="Datos del portafolio" [toggleable]="true">
     <div class="row mt-1">
@@ -104,7 +103,7 @@
 
 
 
-<p-fieldset legend="Tipo Pozo Productor" [style]="{width: '90%'}">
+<p-fieldset legend="Tipo Pozo Inyector" [style]="{width: '90%'}">
  
 
     <div class="row">
@@ -150,11 +149,7 @@
             <th>Yacimiento</th>
             <th>Pozo</th>
             <th>BPPD</th>
-            <th>BFPD</th>
-            <th>BSW%</th>
-            <th>*API</th>
-            <th>Equipo</th>
-            <th>SALINIDAD PPM</th>
+            
         </tr>
       </thead>
       <tbody>
@@ -166,12 +161,7 @@
         <td>{{produccion.yacimiento}} </td>
         <td>{{produccion.pozo_nombre}} </td>
         <td>{{produccion.bppd}} </td>
-        <td>{{produccion.bfpd}} </td>
-        <td>{{produccion.bsw}} </td>
-        <td>{{produccion.api}} </td>
-        <td>{{produccion.equipo}} </td>
-        <td>{{produccion.salinidad_ppm}} </td>
-
+       
         </tr>
       <tr>
           <td> <p><b>Promedio:</b></td>
@@ -212,11 +202,6 @@
           <th>Yacimiento</th>
           <th>Pozo</th>
           <th>BPPD</th>
-          <th>BFPD</th>
-          <th>BSW%</th>
-          <th>*API</th>
-          <th>Equipo</th>
-          <th>SALINIDAD PPM</th>
       </tr>
     </thead>
     <tbody>
@@ -227,11 +212,6 @@
         <td>{{produccion.yacimiento}} </td>
         <td>{{produccion.pozo_nombre}} </td>
         <td>{{produccion.bppd}} </td>
-        <td>{{produccion.bfpd}} </td>
-        <td>{{produccion.bsw}} </td>
-        <td>{{produccion.api}} </td>
-        <td>{{produccion.equipo}} </td>
-        <td>{{produccion.salinidad_ppm}} </td>
       </tr>
 
       <tr>
@@ -258,7 +238,7 @@
 <br>
 </p-fieldset>
 
-<p-fieldset legend="Formulario de Ingreso"   *ngIf="verificacionProduccion.formDisabled ==0"  [toggleable]="true"  >
+<p-fieldset legend="Formulario de Ingreso" [toggleable]="true" *ngIf="verificacionProduccion.formDisabled==0" >
 <div class="row">
 
 
@@ -306,14 +286,14 @@
               <label for="verificacionProduccion"><b>Valoración:*</b></label>
             </div>
             <div class="col-md">
-                <p class="label">{{verificacionProduccion.descripcionValoracion }}</p>
+                <p class="label">{{verificacionProduccion.valoracion | ValoracionProduccion }}</p>
             </div>
           </div>
         </div>
       </div>
 
       
-    <div class="row" *ngIf="verificacionProduccion.formDisabled==0" >
+    <div class="row">
       
       <div class="col-md-6">
         <div class="row">
@@ -424,7 +404,7 @@
             <th>Observacion</th>
             <th>Estado</th>
             <th>Fecha Actualización</th>
-            <th>Editar</th>
+         
           </tr>
         </thead>
         <tbody>
@@ -439,9 +419,7 @@
             <td>{{verificacionProduccion.observacion }} </td>
             <td>{{verificacionProduccion.estado| estadoBitacora}} </td>
             <td>{{verificacionProduccion.fecha_actualizacion | date:'dd/MM/yyyy'}} </td>
-            <td class="text-center">
-              <i class="fa fa-pencil-square-o fa-2x" (click)="editarProduccion(verificacionProduccion,produccion);"></i>            
-          </td>
+         
           </tr>
 
         </tbody>
@@ -452,11 +430,10 @@
 
 <div class="row">
     <div class="col-md-12 row justify-content-center">
-        <button type="button" class="btn btn-secondary btn-sm"  (click)="volver(portafolio) "><i class="fa fa-calendar-o" aria-hidden="true">&nbsp;Verificar Fechas</i>
-        </button>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <button type="button" class="btn btn-primary btn-sm"  (click)="siguiente(portafolio)" ><i class="fa fa-bar-chart" aria-hidden="true">&nbsp; Verificar Novedades</i>
-        </button>
+        <div class="col-md-12 row justify-content-center">
+          <button type="button" class="btn btn-secondary btn-sm"  (click)="volver()">Volver
+          </button>
+        </div>
     </div>
 </div>
 
