--- a/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
@@ -1,3 +1,106 @@
+  
+  <H4> Verificación Novedades</H4>
+  <p-fieldset legend="Datos del portafolio" [toggleable]="true">
+    <div class="row mt-1">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Numero de Novedad:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.codigoPortafolio}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Fecha de Registro:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Funcionario:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.funcionario.nombres}} {{portafolio.funcionario.apellidos}}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row mt-1">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Pozo:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.pozo.pozNombre}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Trabajo:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.tipoTrabajo.tipoTrabajo}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4" *ngIf="portafolio.fechaTrabajoSinTorre">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Fecha TST:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.fechaTrabajoSinTorre | date:'dd/MM/yyyy'}}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-1">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Número de Trabajo:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.numeroTrabajo}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Fecha Inicio Trabajo:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.fechaInicio  | date:'dd/MM/yyyy'}}</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-4">
+            <p><b>Fecha Fin Trabajo:</b></p>
+          </div>
+          <div class="col-md-8">
+            <p>{{portafolio.fechaFin  | date:'dd/MM/yyyy' }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </p-fieldset>
+  <br>
+  
 <p-fieldset legend="Verificar Novedades" [toggleable]="true">
   <div class="row">
     <div class="col-md-12">
@@ -9,54 +112,17 @@
       <div class="col-md-6">
           <div class="row">
             <div class="col-md-4">
-                <label for="campo"><b> Numero Portafolio: </b></label>
+                <label for="campo"><b> Numero Novedad: </b></label>
             </div>
             <div class="col-md">
-                <p class="mtop">{{verificacioNovedad.codPortafolio}}</p>
+                <p class="mtop">{{portafolio.codigoPortafolio}}_{{verificacioNovedad.codVerfTrabajoInc}} </p>
             </div>
           </div>
         </div>    
     </div>
 
 
-  <div class="row">
-
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="verificacionNovedad"><b>Fecha Inicio de Trabajo:</b></label>
-        </div>
-        <div class="col-md">
-            <p class="mtop">{{portafolio.fechaInicio | date:'MM-dd-yyyy'}}</p>
-          
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="verificacionNovedad"><b>Fecha Fin de Trabajo:</b></label>
-        </div>
-        <div class="col-md">
-            <p class="mtop">{{portafolio.fechaFin | date:'MM-dd-yyyy'}}</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-6">
-      <div class="row">       
-        <div class="col-md-4">
-          <label for="verificacionNovedad"><b>Nro de Novedad:*</b></label>
-        </div>
-        <div class="col-md">
-          <p class="mtop">{{verificacioNovedad.codVerfTrabajo}}</p>
-        </div>
-      </div>
-    </div>
-
-
-  </div>
+ 
 
   <div class="row">
     <div class="col-md-6">
@@ -65,34 +131,14 @@
           <label for="verificacionNovedad"><b>Novedad:</b></label>
         </div>
         <div class="col-md">
-        <p-dropdown [options]="novedad" [(ngModel)]="verificacioNovedad.valoracion" readonly></p-dropdown>
+        <p-dropdown [options]="novedad" [(ngModel)]="verificacioNovedad.novedad" readonly></p-dropdown>
         </div>
       </div>
     </div>
 
-    <div class="col-md-6">
-      <div class="row">       
-        <div class="col-md-4">
-          <label for="verificacionNovedad"><b>Justificado:*</b></label>
-        </div>
-        <div class="col-md">
-        <p-dropdown [options]="justificadoList" [(ngModel)]="verificacioNovedad.justificado" readonly></p-dropdown>
-        </div>
-      </div>
-    </div>
-  </div>
 
-<div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="verificacionNovedad"><b>Observacion:*</b></label>
-        </div>
-        <div class="col-md">
-            <textarea id="verificacionNovedad"   [(ngModel)]="verificacioNovedad.observacion"  class="md-textarea form-control" rows="3"></textarea>       
-        </div>
-      </div>
-    </div>
+    
+
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
@@ -100,6 +146,42 @@
         </div>
         <div class="col-md">
         <p-dropdown [options]="estadolist" [(ngModel)]="verificacioNovedad.estado" readonly></p-dropdown>
+        </div>
+      </div>
+    </div>
+  
+
+  <div class="col-md-6">
+    <div class="row">       
+      <div class="col-md-4">
+        <label for="verificacionNovedad"><b>Justificado:*</b></label>
+      </div>
+      <div class="col-md">
+      <p-dropdown [options]="justificadoList" [(ngModel)]="verificacioNovedad.justificado" readonly></p-dropdown>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="row">       
+      <div class="col-md-4">
+        <label for="verificacionNovedad"><b>Valoración:*</b></label>
+      </div>
+      <div class="col-md">
+      <p-dropdown [options]="valoracionList" [(ngModel)]="verificacioNovedad.valoracion" readonly></p-dropdown>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row"  *ngIf="verificacioNovedad.justificado == 1">
+    <div class="col-md-12">
+      <div class="row">
+        <div class="col-md-12">
+          <label for="verificacionNovedad"><b>Observacion:*</b></label>
+        </div>
+        <div class="col-md">
+            <textarea id="verificacionNovedad"   [(ngModel)]="verificacioNovedad.observacion"  class="md-textarea form-control" rows="3"></textarea>       
         </div>
       </div>
     </div>
@@ -140,7 +222,7 @@
   <hr />
   <div class="row justify-content-end">
     <div class="col-md-4">
-      <button type="button" class="button" (click)="guardar()">
+      <button type="button" class="btn btn-sm btn-info btn-block" (click)="guardar()">
         Guardar
       </button>
     </div>
@@ -156,33 +238,54 @@
         <thead>
           <tr>
 
-            <th>Nro. Verificación Fecha</th>
-            <th>Estado</th>
-            <th>Valoración</th>
+            <th>Nro. Novedad</th>
+            <th>Novedad</th>
             <th>Justificado</th>
+            <th>Estado</th>
             <th>Fecha Actualización</th>
             <th>Observacion</th>
             <th>Seguimiento</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let verificacionNovedad of novedadList" style="font-size: 11px">
+          <tr *ngFor="let verificacionNovedad of novedadList | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">
 
-            <td>{{verificacionNovedad.codVerfTrabajo}} </td>
-            <td>{{verificacionNovedad.estado}} </td>
-            <td>{{verificacionNovedad.valoracion}} </td>
-            <td>{{verificacionNovedad.justificado}} </td>
-            <td>{{verificacionNovedad.fecha_actualizacion  | date:'MM-dd-yyyy' }} </td>
+            <td>{{portafolio.codigoPortafolio}}_{{verificacionNovedad.codVerfTrabajo}} </td>
+            <td>{{verificacionNovedad.novedad  | JustificadoBitacora }} </td>
+            <td>{{verificacionNovedad.justificado | JustificadoBitacora}} </td>
+            <td>{{verificacionNovedad.estado | estadoBitacora}}  </td>
+            <td>{{verificacionNovedad.fecha_actualizacion  | date:'dd-MM-yyyy' }} </td>
             <td>{{verificacionNovedad.observacion }} </td>
+           <td>
+          
+              <i class="fa fa-check"></i>
+    
+          </td>
           </tr>
 
         </tbody>
       </table>
     </div>
-
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <pagination-controls id="paginator" (pageChange)="page_number = $event" previousLabel="Anterior"
+          nextLabel="Siguiente" responsive="true">
+          ></pagination-controls>
+      </div>
+    </div>
   </div>
-
 </p-fieldset>
+
+
+<div class="row">
+  <div class="col-md-12 row justify-content-center">
+      <button type="button" class="btn btn-secondary btn-sm"  (click)="volver(portafolio) "><i class="fa fa-bar-chart" aria-hidden="true">&nbsp;Verificar Producción</i>
+      </button>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <button type="button" class="btn btn-secondary btn-sm"  (click)="volver(portafolio) "><i class="fa fa-comments" aria-hidden="true">&nbsp;Conclusiones y Recomendaciones</i>
+      </button>
+</div>
+
 
 <ng-template #customLoadingTemplate> </ng-template>
 <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
