--- a/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.css
+++ b/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.css
@@ -9,12 +9,11 @@
 input {
   height: 24px;
   width: 100%;
-  margin-top: 4px;
   font-size: 12px;
 }
 
 p {
-  font-size: 12px;
+  font-size: 14px;
 }
 label {
   font-size: 12px;
@@ -25,33 +24,10 @@ body .ui-dropdown .ui-dropdown-label {
   height: 24px;
 }
 
-.mtop {
-  margin-top: 4px;
-}
-
-.button {
-  background-color: white;
-  color: var(--sitp-color);
-  border: 2px solid var(--sitp-color);
+textarea {
   font-size: 12px;
-  border-radius: 5px;
-  width: 100%;
+
 }
 
-span {
-  font-size: 14px;
-  margin-left: 1px;
-  margin-right: 1px;
-}
 
-td {
-  font-size: 12px;
-}
-th {
-  font-size: 12px;
-}
 
-li {
-  margin-left: 3px;
-  margin-right: 3px;
-}
