--- a/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
@@ -1,132 +1,109 @@
 <p-fieldset legend="Creación portafoilo trabajo en Pozo" [toggleable]="true">
 
-  <div class="row justify-content-end">
-    <div class="col-md-2 ">
-      <button type="button" class="btn btn-sm btn-success btn-block" (click)="guardarPortafolio()">
-        Guardar
-      </button>
-    </div>
-    <div class="col-md-2">
-      <button type="button" class="btn btn-sm btn-danger btn-block" (click)="goToBuscarPortafolio()">
-        Cancelar
-      </button>
-    </div>
-  </div>
 
-  <hr />
-  <div class="row">
+  <div class="row ">
     <div class="col-md-12">
-      <p class="float-right"><b>Fecha registro:&nbsp;&nbsp;</b> {{today | date:'dd/MM/yyyy'}}</p>
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Campo:*</b></label>
+      <div class="row mt-2">
+        <div class="col-md-6 mt-1">
+          <button type="button" class="btn btn-sm btn-success btn-block" (click)="guardarPortafolio()"> <i
+              class="fa fa-floppy-o"></i></button>
         </div>
-        <div class="col-md">
-          <p-dropdown [options]="campoList" [filter]="true" [(ngModel)]="campo" (onChange)="cargarCampoPozo(campo);">
-          </p-dropdown>
+        <div class="col-md-6 mt-1">
+          <button type="button" class="btn btn-sm btn-danger btn-block" (click)="goToBuscarPortafolio()">
+            <i class="fa fa-sign-out"></i>
+          </button>
         </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Pozo:*</b></label>
+  </div>
+  <div class="row ">
+    <div class="col-md-8">
+      <div class="row mt-2">
+        <div class="col-md-12">
+          <label for="campo"><b>Bloque:*</b></label>
+          <p class="mtop">{{bloque.bqlNombre}}</p>
         </div>
-        <div class="col-md">
+        <div class="col-md-12">
+          <label for="campo"><b>Operadora:*</b></label>
+          <p class="mtop">{{operadora.cexApellidoPaterno}}</p>
+        </div>
+        <div class="col-md-12">
+          <label><b>Campo:*</b></label>
+          <p-dropdown [options]="campoList" [filter]="true" [(ngModel)]="campo" (onChange)="cargarCampoPozo(campo);">
+          </p-dropdown>
+        </div>
+        <div class="col-md-12">
+          <label><b>Pozo:*</b></label>
           <p-dropdown [options]="pozoList" [(ngModel)]="pozo" (onChange)="cargarOperadoraByPozCompaniaPetrolera(pozo);"
             [filter]="true">
           </p-dropdown>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Bloque:*</b></label>
-        </div>
-        <div class="col-md">
-          <p class="mtop">{{bloque.bqlNombre}}</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Tipo pozo:*</b></label>
-        </div>
-        <div class="col-md">
+        <div class="col-md-12">
+          <label><b>Tipo pozo:*</b></label>
           <p-dropdown [options]="tipoPozoList" [(ngModel)]="tipoPozo"></p-dropdown>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Operadora:*</b></label>
-        </div>
-        <div class="col-md">
-          <p class="mtop">{{operadora.cexApellidoPaterno}}</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
           <label for="campo"><b>Consorcio:*</b></label>
-        </div>
-        <div class="col-md">
           <p-dropdown [options]="consorcioList" [(ngModel)]="consorcio"></p-dropdown>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
+
+        <div class="col-md-12">
           <label for="campo"><b>Trabajo:*</b></label>
+          <p-dropdown [options]="tipoTrabajoList" [(ngModel)]="tipoTrabajo"></p-dropdown>
         </div>
-        <div class="col-md">
-          <p-dropdown [options]="tipoTrabajoList" [(ngModel)]="tipoTrabajo"
-            (onChange)="verificacionTipoTrabajo(tipoTrabajo);"></p-dropdown>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6" *ngIf="tipoTrabajo.codigoTipoTrabajo != 1">
-      <div class="row">
-        <div class="col-md-4">
+
+        <div class="col-md-12" *ngIf="tipoTrabajo.codigoTipoTrabajo != 1">
           <label for="campo"><b>Numero:</b></label>
+          <input type="text" [(ngModel)]="portafolio.numeroTrabajo" pInputText>
         </div>
-        <div class="col-md">
-          <input type="text" [(ngModel)]="numeroTrabajo" pInputText>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row" *ngIf="tipoTrabajo.codigoTipoTrabajo == 3">
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
+
+        <div class="col-md-12" *ngIf="tipoTrabajo.codigoTipoTrabajo == 3">
           <label for="campo"><b>Fecha trabajo sin torre:</b></label>
-        </div>
-        <div class="col-md">
           <p-calendar [style]="{ width: '100%' }" [minDate]="minDate" [maxDate]="maxDate"
             [inputStyle]="{ width: '100%' }" [(ngModel)]="portafolio.fechaTrabajoSinTorre"></p-calendar>
         </div>
       </div>
     </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12">
+
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr class="text-center">
+                <th scope="col">Historial del pozo</th>
+
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="text-center">
+                <td>WO1</td>
+              </tr>
+              <tr class="text-center">
+                <td>WO2</td>
+              </tr>
+              <tr class="text-center">
+                <td>WO3</td>
+              </tr>
+              <tr class="text-center">
+                <td>WO4</td>
+              </tr>
+            </tbody>
+          </table>
+
+        </div>
+      </div>
+
+    </div>
   </div>
+
+
+
+
+
+
+
+
 
 </p-fieldset>
 <ng-template #customLoadingTemplate> </ng-template>
