--- a/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.css
+++ b/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.css
@@ -11,7 +11,14 @@ input{
     width: 100%;
     margin-top: 4px;
     font-size: 12px;
+
 }
+
+textarea {
+    font-size: 12px;
+
+}
+
 
 p{
     font-size: 12px;
